# Opal

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  First OpenGL Program.cbp  First OpenGL Program.depend  First OpenGL Program.layout  Makefile  OpenGL-Game.mk  OpenGL-Game.project  OpenGL-Game.txt  README.md  compile.sh  compile_flags.txt  defscene.json  ideas.txt  install.sh  main.cpp  main.h  run.sh
Benchmarking/: February 24 - Entity Creation.txt
Camera/: camera.cpp
Core/: openGL.h
Debug/: shader.gs  shader.vs
Display/: Display.h  cameramodule.cpp  display.cpp  display.h  inputmodule.cpp
Model/: ShittyObject.cpp  renderchain.cpp  renderchain.h  renderobject.cpp  renderobject.h  shittyObject.cpp  shittyObject.h  testObject.cpp  testObject.h
Model/Assimp/: assimploader.cpp  assimploader.h
Model/Shader/: shader.cpp  shader.h
Model/Sprite/: sprite.cpp  sprite.h
OpenGL/: GLApi.cpp  GLApi.h  OpenGL.cpp  OpenGL.h  glapi.cpp  glapi.h  openGL.cpp  openGL.h
Resources/Scenes/Test/: main.lua  scene.json  script.lua
Resources/Shaders/: staticmodel_fs.glsl
Resources/Shaders/staticmodel/: staticmodel_fs.glsl  staticmodel_vs.glsl
Shader/: shader.cpp  shader.h
Shaders/: shader.fs  shader.vs
Utilities/: utilities.hpp
include/: camera.h  display.h  renderchain.h  renderobject.h  shader.h  sprite.h  utilities.hpp
include/Opal/Components/: components.hh
include/Opal/Core/: camera.hh  display.hh  gl.hh  glcore.hh
include/Opal/GL/: gl3w.h
include/Opal/Render/: light.hh  sampler.hh  shader.hh
include/Opal/Resources/: assetstore.hh  model3d.hh  resources.hh  scenehandler.hh  terrain.hh  texture.hh
include/Opal/Scene/: scene.hh
include/Opal/Systems/: movementsystem.hh  rendersystem.hh
include/Opal/Util/: exceptions.hh  log.hh  lua.hh  util.hh
src/: camera.cpp  display.cpp  glapi.cpp  inputmodule.cpp  main.cc  main.cpp  renderchain.cpp  renderobject.cpp  shader.cpp  sprite.cpp
src/Assimp/: assimploader.cpp  assimploader.hpp  assimpmodel.cpp  assimpmodel.hpp
src/Components/: components.cc  components.hh
src/Core/: camera.cc  camera.cpp  camera.hh  camera.hpp  display.cc  display.cpp  display.hh  display.hpp  gl.hh  glapi.cpp  glapi.hpp  glcore.cc  glcore.cpp  glcore.hh  glcore.hpp  inputcontroller.cc  inputcontroller.cpp  inputcontroller.hpp  openGL.cpp  openGL.h  openGL.hpp
src/Display/: cameramodule.cpp  display.cpp  display.h  display.hpp  inputmodule.cpp
src/Display/Modules/: cameramodule.cpp  inputmodule.cpp
src/ECS/: components.cpp  components.hpp  ecs.hpp  entity.hpp  entitymanager.hpp  system.hpp  systems.hpp
src/ECS/Systems/: movementsystem.hpp  rendersystem.hpp
src/Entity/: entity.cpp  entity.hpp
src/Model/: renderchain.cpp  renderchain.h  renderchain.hpp  renderobject.cpp  renderobject.h  renderobject.hpp  testObject.cpp  testObject.h  testObject.hpp
src/Model/Assimp/: assimploader.cpp  assimploader.h  assimploader.hpp  assimpmodel.cpp  assimpmodel.h  assimpmodel.hpp
src/Model/Models/: staticmodel.cpp  staticmodel.h  staticmodel.hpp
src/Model/Models/Sprite/: sprite.cpp  sprite.hpp
src/Model/Render/: renderchain.cpp  renderchain.hpp
src/Model/Shader/: shader.cpp  shader.hpp
src/Model/Sprite/: sprite.h  sprite.hpp
src/Model/Textures/: sampler.cpp  sampler.hpp  texture.cpp  texture.hpp
src/Models/: dynamicmodel.cpp  dynamicmodel.hpp  line.cc  line.cpp  line.hh  line.hpp  sprite.hpp  staticmodel.cpp  staticmodel.hpp
src/Render/: light.cc  light.cpp  light.hh  renderchain.cpp  renderchain.hpp  renderobject.cc  renderobject.cpp  renderobject.hh  renderobject.hpp  sampler.cc  sampler.cpp  sampler.hh  shader.cc  shader.cpp  shader.hh  shader.hpp
src/Render/Sampler/: sampler.cpp  sampler.hpp
src/Render/Shader/: shader.cpp  shader.hpp
src/Render/Textures/: texture.hpp
src/Resources/: assetstore.cc  assetstore.hh  model3d.cc  model3d.cpp  model3d.hh  model3d.hpp  resource.cpp  resource.hpp  resourcehandler.cc  resourcehandler.cpp  resourcehandler.hh  resourcehandler.hpp  resourceloader.cpp  resourceloader.hpp  resources.cc  resources.hh  scenehandler.cc  scenehandler.hh  shader.cpp  shader.hpp  terrain.cc  texture.cc  texture.cpp  texture.hh  texture.hpp  util.cc  util.hh
src/Scene/: scene.cc  scene.cpp  scene.hh  scene.hpp  scenecontroller.cpp  scenecontroller.hpp
src/Scenes/: lines.json
src/Shaders/: line.vs  staticmodel.fs  staticmodel.vs
src/Systems/: boundingboxrendersystem.cc  modelrendersystem.cc  movementsystem.cc  movementsystem.hh  normalrendersystem.cc  rendersystem.cpp  rendersystem.hh  rendersystem.hpp  terrainrendersystem.cc
src/Util/: exceptions.cc  log.cc  util.cc  util.hh
src/Utilities/: exceptions.cc  exceptions.cpp  exceptions.hh  exceptions.hpp  log.cc  log.cpp  log.h  log.hh  log.hpp  lua.hpp  utilities.cc  utilities.cpp  utilities.h  utilities.hh  utilities.hpp
(+2 files in other folders)
